feat: remove warning on running tests